--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+  
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -36,11 +37,11 @@
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Minimal</a></h1>
+			<h1 class="logo"><a href="index.html#home">HackWestlake</a></h1>
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
 			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Portfolio</a>
+			<a href="#portfolio" class="smoothScroll">Apply</a>
 			<a href="#contact" class="smoothScroll">Contact</a>
 			<a href="#"><i class="icon-facebook"></i></a>
 			<a href="#"><i class="icon-twitter"></i></a>
@@ -70,7 +71,9 @@
 				<br>
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
-				</div>
+                </div>
+                
+                <div id="gradient"></div>
 			</div>
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
@@ -82,12 +85,12 @@
 	<div id="f">
 		<div class="container">
 			<div class="row">
-				<h3>ABOUT ME</h3>
+				<h3>HackWestlake?</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>A full time theme crafter based in Madrid, Spain. I love designing beautiful, clean and user-friendly interfaces for websites.</p>
+					<p>Hack</p> <p>Westlake</p>
 					<p>My passion is turning good ideas and products into eye-catching sites.</p>
 					<p>Sometimes I blog about design and web trends. Also I share links and my thoughts on <a href="http://twitter.com/BlackTie_co">Twitter</a>. Need a free handsome bootstrap theme? <a href="http://blacktie.co">Done!</a></p>
 					<p>I'm available for freelance jobs. Contact me now.</p>
@@ -158,6 +161,6 @@
 	<script src="assets/js/classie.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/smoothscroll.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/main.js"></script> s
 </body>
 </html>
