--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 
                 <div id="gradient"></div>
 			</div>
-        <img href="#about" class= "smoothScroll" src="assets/img/arrow.svg">
+        <a href="#about" class= "smoothScroll"><img src="assets/img/arrow.svg"></a> 
 		</div>
 	
 	
@@ -132,7 +132,7 @@
     <script src="assets/js/smoothscroll.js"></script>
 	<script src="assets/js/main.js"></script> 
 
-Crafted by Ninja Campbell
+Crafted by Ninja Harrison
 
 <div></div>
 </body>
